--- a/UI/src/app/component/kpi-card-v3/ps-kpi-card-filter/ps-kpi-card-filter.component.html
+++ b/UI/src/app/component/kpi-card-v3/ps-kpi-card-filter/ps-kpi-card-filter.component.html
@@ -1,13 +1,23 @@
-<div class="kpi-card-filter p-px-5 p-py-2">
-    <div id="">
-         <p-selectButton [options]="kpiCardFilter.dataGroup.dataGroup1" [(ngModel)]="selectedKey"
-        optionLabel="name" optionValue="key"></p-selectButton> 
+<form [formGroup]="form" (ngSubmit)="handleChange()">
+    <div class="kpi-card-filter p-px-5 p-py-2">
+        <div id="">
+            <p-selectButton 
+                [options]="kpiCardFilter.dataGroup.dataGroup1" 
+                (onChange)="onSelectButtonChange($event)"
+                optionLabel="name" 
+                optionValue="key">
+            </p-selectButton>
+        </div>
+        <div class="filterSection">
+            <ng-container class="p-p-1" *ngFor="let filter of kpiCardFilter.filterGroup.filterGroup1">
+                <p-dropdown 
+                    [options]="getOptions(filter?.filterKey)" 
+                    [formControlName]="filter?.filterKey" 
+                    (onChange)="handleChange()"
+                    [filter]="true" 
+                    [placeholder]="filter?.filterName">
+                </p-dropdown>
+            </ng-container>
+        </div>
     </div>
-    <div class="filterSection">
-        <ng-container class="p-p-1" *ngFor="let filter of kpiCardFilter.filterGroup.filterGroup1">
-        <p-dropdown [options]="getOptions(filter?.filterKey)" [(ngModel)]="dropdownSelected[filter?.filterKey]" 
-        optionLabel="label" optionValue="value" (onChange)="handleChange()"
-         [filter]="true" [placeholder]="filter?.filterName"></p-dropdown>
-        </ng-container>
-    </div>
-</div>
+</form>
