--- a/UI/src/app/component/kpi-card-v3/ps-kpi-card-header/ps-kpi-card-header.component.html
+++ b/UI/src/app/component/kpi-card-v3/ps-kpi-card-header/ps-kpi-card-header.component.html
@@ -18,7 +18,7 @@
         <app-tooltip-v2
           *ngIf="isTooltip"
           class="p-mt-3"
-          [data]="cardHeaderData?.kpiInfo?.definition"
+          [data]="cardHeaderData?.kpiInfo"
           (mouseleave)="showTooltip(false)"
           [kpiName]="cardHeaderData?.kpiName"
         ></app-tooltip-v2>
