--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -113,7 +113,7 @@
         <ng-template let-option pTemplate="item">
           <div class="filter-item">
             <p-checkbox name="{{ option.kpiId }}" [(ngModel)]="option.isEnabled" [binary]="true"
-              (onChange)="disableShowHideApply = false; showHideSelectAll = false;"></p-checkbox>
+              (onChange)="setSelectAll(); disableShowHideApply = false;"></p-checkbox>
             <span>{{option.kpiName}}</span>
           </div>
         </ng-template>
