--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -16,8 +16,8 @@
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <ng-container *ngIf="(!noProjects[selectedtype]); else noProjectsTemplate">
-    <div *ngIf="!noKpis; else noKpiTemplate">
-        <ng-container *ngIf="!noFilterApplyData; else noFilterApplyDataTemplate">
+    <ng-container *ngIf="!noFilterApplyData; else noFilterApplyDataTemplate">
+        <ng-container *ngIf="!noKpis; else noKpiTemplate">
             <div id="message"></div>
             <div class="{{selectedtype}}" id="{{selectedtype}}">
                 <div class="clearfix" *ngIf="showChart !== 'table'">
@@ -390,7 +390,7 @@
                     [kpiData]="kpiTableDataObj" [colorObj]="colorObj"></app-kpi-table>
             </div>
         </ng-container>
-    </div>
+    </ng-container>
     <ng-template #noKpiTemplate>
         <div class="no-kpi-template">
             <app-no-access [selectedTab]="''" [userEnable]='enableByUser'></app-no-access>
