--- a/UI/src/app/component/kpi-card-v3/ps-kpi-card-header/ps-kpi-card-header.component.css
+++ b/UI/src/app/component/kpi-card-v3/ps-kpi-card-header/ps-kpi-card-header.component.css
@@ -25,4 +25,12 @@
   position: absolute;
   right: 20px;
 }
+
+:host ::ng-deep .p-menu.p-menu-overlay {
+  top: 40px !important;
+}
   
+:host ::ng-deep .p-menu.p-component.p-menu-overlay {
+  left: unset !important;
+  right: 10px !important;
+}
