--- a/UI/src/app/component/barchart/barchart.component.css
+++ b/UI/src/app/component/barchart/barchart.component.css
@@ -16,15 +16,19 @@
  *
  ******************************************************************************/
 
-.graphic {
-  text-align: center;
+ .chart-container {
   width: 100%;
-  height: 125px;
-  top: 0;
-  display: inline-block;
-  bottom: 0;
-  margin: auto;
+  height: 400px;
+  position: relative;
+}
+
+.tooltip {
   position: absolute;
-  left: 0;
-  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  pointer-events: none;
+  display: none;
+  font-size: 12px;
 }
