--- a/UI/src/app/component/kpi-card-v3/ps-kpi-card-filter/ps-kpi-card-filter.component.html
+++ b/UI/src/app/component/kpi-card-v3/ps-kpi-card-filter/ps-kpi-card-filter.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="handleChange()">
     <div class="kpi-card-filter p-px-5 p-py-2">
-        <div id="">
+        <div *ngIf="kpiCardFilter?.chartType === 'stacked-bar-chart'" id="">
             <p-selectButton 
                 [options]="kpiCardFilter.dataGroup.dataGroup1" 
                 (onChange)="onSelectButtonChange($event)"
